<resources>
    <string name="app_name">SVSU-CSIS (CS-403)</string>
        <string name="hello_world">Hello world!</string>
        <string name="menu_settings">Settings</string>
        <string name="gpcorser">George Corser</string>
        <string name="kafzal">Komal Afzal</string>
        <string name="adarenas">Alejandro Arenas</string>
        <string name="bjcobb">Brian Cobb</string>
        <string name="pjessenm">Phil Essenmacher</string>
        <string name="gxhender">Gerald Henderson</string>
        <string name="tskosask">Tyler Kosaski</string>
        <string name="rtmegerl">Richard Megerle</string>
        <string name="tpmetiva">Tyler Metiva</string>
        <string name="zmmetiva">Zach Metiva</string>
        <string name="alpero">Adam Pero</string>
        <string name="mdroof">Michael Roof</string>
        <string name="jmwalter">Joshua Walters</string>
        <string name="ntwhitfi">Nathan Whitfield</string>
        <string name="amyork">Andrew York</string>
        <string name="action_settings">Settings</string>
        <string name="gpcorser_bio">Great humanitarian</string>
    <string name="gpcorser_dept_desc">Department Description</string>
    <string name="gpcorser_dept_desc_text1">Inside the classroom</string>
    <string name="gpcorser_dept_desc_text2">Outside the classroom</string>
    <string name="gpcorser_dept_desc_text3">The Computer Science program and Computer Information Systems program share many of the same core classes to ensure that students are adequately prepared with the necessary background for their upper class studies.  This common core includes programming both in a Windows graphical environment as well as in a UNIX command-line environment.  Industry uses both operating systems and so the Department wants students to be well versed in each area.  Additionally, students will learn C++ and Microsoft Visual Basic as toolsets to develop applications.  The common core also includes introductory data structures, statistics with computer applications, web client development and web server development.  Both majors are heavily programming-oriented.  The curriculum has been designed this way on purpose so that students can learn about a concept and then use their programming knowledge as a vehicle to understand, experiment and implement that topic.  Both programs do a great job in preparing students for their future in industry or to pursue a graduate degree</string>
    <string name="gpcorser_difference_cs_cis">Difference Between CS and CIS</string>
    <string name="csCourseSequenceTextView">CS Course Sequence</string>
    <string name="freshmanHeadingText">Year 1 - Freshman</string>
    <string name="generalReqText">General Requirements</string>
    <string name="GenEduText">General Education</string>
    <string name="coreRequrementsText">Core Requirments</string>
    <string name="electivesText">Electives</string>
    <string name="math103Text">Math 103</string>
    <string name="comm105AText">Comm 105</string>
    <string name="math161Text">Math 161</string>
    <string name="PHILReqText">PHIL 205A (or 210B)</string>
    <string name="cs105Text">CS 105</string>
    <string name="cs146Text">CS 146</string>
    <string name="cs116Text">CS 116</string>
    <string name="juniorHeadingText">Year 3 - Junior</string>
    <string name="sophomoreHeadingText">Year 2 - Sophomore</string>
    <string name="CIS_Title">CIS</string>
    <string name="CIS_Web">
        <![CDATA[
        <html>
            <body>
                <h3>Computer Information Systems</h3>
                <p>The Computer Information Systems program and Computer Science program share many of the same core classes to ensure that students are adequately prepared with the necessary background for their upper class studies.  This common core includes programming both in a Windows graphical environment as well as in a Unix command-line environment.  Industry uses both operating systems and so the Department wants students to be well versed in each area.  Additionally, students will learn C++ and Microsoft Visual Basic as toolsets to develop applications.  The common core also includes introductory data structures, statistics with computer applications, web client development and web server development.  Both majors are heavily programming-oriented.  The curriculum has been designed this way on purpose so that students can learn about a concept and then use their programming knowledge as a vehicle to understand, experiment and implement that topic.  Both programs do a great job in preparing students for their future in industry or to pursue a graduate degree

Computer Information Systems tends to be more application oriented than Computer Science and geared toward application development with some business emphasis.  Computer Information Systems majors will see the following in their degree program:</p>
                <ul>
                    <li>Topical Coverage Synopsis: Models, technologies, systems and E-business strategies that are crucial in today’s businesses</li>
                    <li>Cutting-edge technology skills and knowledge:
                    <ul>
                        <li>Application Areas: Data Communications, Database, e-Commerce, .NET development</li>
                        <li>Technical Topics: system integration &amp; management, systems design and analysis, enterprise database systems &amp; transaction processing and much more</li>
                    </ul>
                    </li>
                </ul>
            </body>
        </html>
        ]]>
    </string>
<string name="MissionInfo">The mission of the Department of Computer Science and Information Systems at SVSU is to provide an outstanding education to its students in accordance with the guidelines of the SVSU mission, to advance scholarship in the key domains of the computing and information systems sciences, and to engage in activities that improve the welfare of society and enhance the reputation of SVSU.  The department will provide its students with balanced programs which emphasize:
   \n
    \n - the knowledge of the core principles of computer science
    \n - the skills necessary to use computers to solve real-world problems
    \n - experience in implementing solutions with modern computing tools
    \n - the communication skills necessary to work effectively in a team
    \n - foster a high level of faculty/student interaction and mentoring
        \n
      \n  At the end of their programs at SVSU, the department expects CSIS students to be able to:
        \n
    \n - Solve problems by using skills in math, computer science, and technology
    \n - Design, implement, document and maintain computer systems
    \n - Communicate effectively both orally and in writing
    \n - Understand professional, ethical, legal, security and social issues and responsibilities
    \n - Apply their knowledge and skills as they start their professional careers
    \n - Work well both independently and collaboratively with diverse groups
    \n - Generate new and creative ideas
        \n
 \n After the successful completion of their degree requirements at SVSU:
        \n
   \n 1) Graduates shall demonstrate a thorough grounding in the fundamental principles and practices of computing and information systems, and those principles that underpin them.
    \n 2) Graduates shall demonstrate an understanding of the contexts in which computing is applied.
    \n 3) Graduates shall find employment in the computing profession and/or continue advanced studies in computer science or information systems.

</string>
    <string name="alpero_news_title1">SVSU Foundation raises $28 million in record fundraising campaign</string>
    <string name="alpero_news_title2">SVSU earns \'Best Dorms\' in Michigan ranking, No. 26 nationally</string>
    <string name="alpero_news_title3">SVSU welcomes expert on climate change effect on small islands </string>
    <string name="alpero_news_date1">September 16, 2015</string>
    <string name="alpero_news_date2">August 19, 2015</string>
    <string name="alpero_news_date3">August 28, 2015</string>
    <string name="seniorHeadingText">Year 4 - Senior</string>
    <string name="cs401Text">CS 401</string>
    <string name="cs421Text">CS 421</string>
    <string name="cs446Text">CS 446</string>
    <string name="cs451Text">CS 451</string>
    <string name="cs402Text">CS 402</string>
    <string name="cs422Text">CS 422</string>
    <string name="cs416Text">CS 416</string>
    <string name="cs431Text">CS 431</string>
    <string name="cs476Text">CS 476</string>
    <string name="cs482Text">CS 482</string>
    <string name="cs490Text">CS 490</string>
    <string name="cs316Text">CS 316</string>
    <string name="cis366Text">CIS 366</string>
    <string name="cis331Text">CIS 331</string>
    <string name="cs411Text">CS 411</string>
    <string name="cs345Text">CS 345</string>
    <string name="cis357Text">CIS 357</string>
</resources>